# image-segmentation

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: ift.hpp  mst.hpp
src/: ift.cpp  main.cpp  mst.cpp  utils.cpp
src/include/: ift.hpp  mst.hpp  utils.hpp
